@@ -34,11 +34,9 @@ import static org.junit.jupiter.api.Assumptions.assumeTrue;
 import java.io.BufferedReader;
 import java.io.BufferedWriter;
 import java.io.File;
-import java.io.FileReader;
 import java.io.IOException;
 import java.io.PrintWriter;
 import java.nio.file.Files;
-import java.nio.file.Paths;
 import java.time.Duration;
 import java.util.ArrayList;
 import java.util.Arrays;
@@ -108,7 +106,6 @@ import org.junit.jupiter.api.Test;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-import com.google.common.collect.Iterables;
 import com.google.common.collect.Sets;
 
 import edu.umd.cs.findbugs.annotations.SuppressFBWarnings;
@@ -187,12 +184,13 @@ public class ShellServerIT extends SharedMiniClusterBase {
       ts.exec("addsplits row5", true);
       ts.exec("config -t " + table + " -s table.split.threshold=345M", true);
       ts.exec("offline " + table, true);
-      File exportDir = new File(rootPath, "ShellServerIT.export");
+      java.nio.file.Path exportDir =
+          java.nio.file.Path.of(rootPath).resolve("ShellServerIT.export");
       String exportUri = "file://" + exportDir;
-      String localTmp = "file://" + new File(rootPath, "ShellServerIT.tmp");
+      String localTmp = "file://" + java.nio.file.Path.of(rootPath).resolve("ShellServerIT.tmp");
       ts.exec("exporttable -t " + table + " " + exportUri, true);
       DistCp cp = new DistCp(new Configuration(false), null);
-      String import_ = "file://" + new File(rootPath, "ShellServerIT.import");
+      String import_ = "file://" + java.nio.file.Path.of(rootPath).resolve("ShellServerIT.import");
       ClientInfo info = ClientInfo.from(getCluster().getClientProperties());
       if (info.saslEnabled()) {
         // DistCp bugs out trying to get a fs delegation token to perform the cp. Just copy it
@@ -210,7 +208,7 @@ public class ShellServerIT extends SharedMiniClusterBase {
 
         // Implement a poor-man's DistCp
         try (BufferedReader reader =
-            new BufferedReader(new FileReader(new File(exportDir, "distcp.txt"), UTF_8))) {
+            Files.newBufferedReader(exportDir.resolve("distcp.txt"), UTF_8)) {
           for (String line; (line = reader.readLine()) != null;) {
             Path exportedFile = new Path(line);
             // There isn't a cp on FileSystem??
@@ -269,7 +267,8 @@ public class ShellServerIT extends SharedMiniClusterBase {
   @Test
   public void execfile() throws Exception {
     // execfile
-    File file = File.createTempFile("ShellServerIT.execfile", ".conf", new File(rootPath));
+    File file = File.createTempFile("ShellServerIT.execfile", ".conf",
+        java.nio.file.Path.of(rootPath).toFile());
     PrintWriter writer = new PrintWriter(file.getAbsolutePath());
     writer.println("about");
     writer.close();
@@ -1151,8 +1150,8 @@ public class ShellServerIT extends SharedMiniClusterBase {
 
     ts.exec("deletetable -f formatter_test", true);
 
-    assertTrue(Iterables.elementsEqual(expectedDefault, new ArrayList<>(actualDefault)));
-    assertTrue(Iterables.elementsEqual(expectedFormatted, new ArrayList<>(actualFormatted)));
+    assertEquals(expectedDefault, actualDefault);
+    assertEquals(expectedFormatted, actualFormatted);
   }
 
   /**
@@ -1440,7 +1439,7 @@ public class ShellServerIT extends SharedMiniClusterBase {
     Configuration conf = new Configuration();
     String nonce = generateNonce();
     FileSystem fs = FileSystem.get(conf);
-    File importDir = createRFiles(conf, fs, table, nonce);
+    java.nio.file.Path importDir = createRFiles(conf, fs, table, nonce);
     ts.exec("createtable " + table, true);
     ts.exec("importdirectory " + importDir + " true", true);
     ts.exec("scan -r 00000000", true, "0-->" + nonce, true);
@@ -1456,7 +1455,7 @@ public class ShellServerIT extends SharedMiniClusterBase {
     Configuration conf = new Configuration();
     String nonce = generateNonce();
     FileSystem fs = FileSystem.get(conf);
-    File importDir = createRFiles(conf, fs, table, nonce);
+    java.nio.file.Path importDir = createRFiles(conf, fs, table, nonce);
     ts.exec("createtable " + table, true);
     ts.exec("notable", true);
     ts.exec("importdirectory -t " + table + " -i " + importDir + " true", true);
@@ -1473,12 +1472,12 @@ public class ShellServerIT extends SharedMiniClusterBase {
     ts.exec("deletetable -f " + table);
   }
 
-  private File createRFiles(final Configuration conf, final FileSystem fs, final String postfix,
-      final String nonce) throws IOException {
-    File importDir = new File(rootPath, "import_" + postfix);
-    assertTrue(importDir.mkdir());
-    String even = new File(importDir, "even.rf").toString();
-    String odd = new File(importDir, "odd.rf").toString();
+  private java.nio.file.Path createRFiles(final Configuration conf, final FileSystem fs,
+      final String postfix, final String nonce) throws IOException {
+    java.nio.file.Path importDir = java.nio.file.Path.of(rootPath).resolve("import_" + postfix);
+    Files.createDirectories(importDir);
+    String even = importDir.resolve("even.rf").toString();
+    String odd = importDir.resolve("odd.rf").toString();
     AccumuloConfiguration aconf = DefaultConfiguration.getInstance();
     FileSKVWriter evenWriter = FileOperations.getInstance().newWriterBuilder()
         .forFile(UnreferencedTabletFile.of(fs, new Path(even)), fs, conf,
@@ -1932,9 +1931,9 @@ public class ShellServerIT extends SharedMiniClusterBase {
     try (AccumuloClient client = Accumulo.newClient().from(getClientProps()).build();
         Scanner s = client.createScanner(table, Authorizations.EMPTY);
         BatchScanner bs = client.createBatchScanner(table)) {
-      assertThrows(RuntimeException.class, () -> Iterables.size(s));
+      assertThrows(RuntimeException.class, () -> s.stream().count());
       bs.setRanges(Collections.singleton(new Range()));
-      assertThrows(RuntimeException.class, () -> Iterables.size(bs));
+      assertThrows(RuntimeException.class, () -> bs.stream().count());
     }
 
   }
@@ -2078,8 +2077,8 @@ public class ShellServerIT extends SharedMiniClusterBase {
   public void importDirectoryCmdFmt() throws Exception {
     final String table = getUniqueNames(1)[0];
 
-    File importDir = new File(rootPath, "import_" + table);
-    assertTrue(importDir.mkdir());
+    java.nio.file.Path importDir = java.nio.file.Path.of(rootPath).resolve("import_" + table);
+    Files.createDirectories(importDir);
 
     // expect fail - table does not exist.
     ts.exec(String.format("importdirectory -t %s %s false", table, importDir), false,
@@ -2433,7 +2432,7 @@ public class ShellServerIT extends SharedMiniClusterBase {
   private java.nio.file.Path createSplitsFile(final String splitsFile, final SortedSet<Text> splits)
       throws IOException {
     String fullSplitsFile = System.getProperty("user.dir") + "/target/" + splitsFile;
-    java.nio.file.Path path = Paths.get(fullSplitsFile);
+    java.nio.file.Path path = java.nio.file.Path.of(fullSplitsFile);
     try (BufferedWriter writer = Files.newBufferedWriter(path, UTF_8)) {
       for (Text text : splits) {
         writer.write(text.toString() + '\n');
